- Changed all "number" in the contract  to "msisdn" - Added new controller and service class for Registration - Updated Constants and PubSubChannels
